Fix image alignment issue in Team page.

--- a/css/toast.css
+++ b/css/toast.css
@@ -5309,6 +5309,7 @@ div.rn-carousel-indicator span.active {
   .tiles li {
     float: left;
     width: 25%;
+    min-height: 12em;
   }
 }
 
